--- a/UI/HMI_Winform/HMI_Winform/Form1.resx
+++ b/UI/HMI_Winform/HMI_Winform/Form1.resx
@@ -118,76 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="label1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJ
-        TUUH4wEJBCYXW2gLiQAAAuxJREFUaEPlmc2uDFEUhVuIGSYMbvxcHoCEmSlibioicuMVhIF4BUQwJmYG
-        BuIRGPAEIn5uYkIwE4n/9d1UyUlbu6qO06e7OlbyJZ199t5nneruOqerJ5W0Ku6Jrw28JjZ6bRInxGPx
-        awpijJEzSu0Ql8RHMW2+hbELgtxR6aB4JL4LZzyFHHKpWbi2ivPihXBmu6BmTdBjIdojbokvwhkcArU3
-        Bb3mqpPimXCmUt42uLEUetGzuvjyXRHvhTPS8kPcF4cbHjQxl9vyTtC72hf8kMDIT+EMtHCnuSy2iVaY
-        ItZ1hwJ6MwdzzUxbxDnxSrhJU56IY8Ld64kdF0+Fq015KZiTuYt0QNwWn4WbqIXx62Kv6NN+Qe6Qntwk
-        9ols5Vwt3pncqzWrd9Vqnp/X3O/VdtGpI+KhGHLHuChmccegB73o6eZqwROLxeNfYjc8LV4LV5xS6549
-        dG/BI17/7OC7xA3Rt6Myzpeq5q45dHdnHM94n9wVLinluTgj5nFuYY6zgjmdlxS8b/zgcIOwyJPjkBMu
-        3u0AfBCLPrszd99vDBv8JE6JsQgveHJebfCNmPsRt0N4wZPzaoPr4p+28ErCC56cVxv8rxbAuWa34LEJ
-        NUMgl5rNYoioqbKAneKa4PhLTQ7UXBX06FOVBXDlMe/qc6BH30m2ygL4CHAVXX0O9KBXl6osgM9x1DQH
-        evQ9dqyygK6mOZTOZYMlTb8JHqWw8TAOvCbG2HR+yVxggyVNMXpU8PuYHOA1MfeMaHQL4Gq7H/fE3HFg
-        dAuIanPzU0W1YIMlTaPa3PxUUS3YYEnTqDY3P1VUCzZY0jSqzc1PFdWCDZY0jWpz81NFtWCDJU2j2tz8
-        VFEt2GBJ06g2Nz9VVAs2WNI0qs3NTxXVgg1Gm1GqaGPK3chK5gIbdMeBFOLR0SD3KFEyF9igO5ClEGfc
-        Hc5yD3Mlc4ENLhM2uEx0PhsdOxvPRu+Ivj80xgie8T5ZaV4s0zuBV3merPwGE1llT/y9i84AAAAASUVO
-        RK5CYII=
-</value>
-  </data>
-  <data name="label2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACkAAAA/CAYAAAB97+FwAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH4wEJAzkIHnUeZwAABB9JREFU
-        aEPt2mnIFVUcx/EnLbPMFoL21BaMFl+0GJRkC6Fp0ruIIBKlaCUMJCoKexdUUBEWQiK2oIgEWRAlVEIE
-        rRAtZlG0F0GklWmW2PcLHThM57l3ljPneeMPPihzvWf+zpyZc+bMHdmbMcg+OAIn4lyciuMwEWOeo3AN
-        VuEjfIet+Alf4CXciRkongOxCO9iN/YMYfEPYiqK5Bg8hb8RivgNb2ElHscT8Ch+j7jYt3EJeo0FbkDY
-        qafWgi7AoYhjfzwFt2MzwncsfD56iad4NcLOPsTlGIdhORlrEbqGRZ+B7FmIcIot8EzEOQAe0evhkToc
-        cSZjBcJ/cg2yXv1H4h3Y+K+onq7QT3+H/+YvbMLZiOPd4A34b/7EAmTL1fgHNu7RiE+x98hH4GdVr+Mw
-        xLkCFujnz2ECOseCnoaNeqQuRhyP8ieIiwu240LE8bR7lP38W9hfO8e+9QFs1FtI9Sr23vc14uJii1HN
-        MviZ3WKeG7omLsJ+5+mNMwWDirwJ1dh9wpV+oxu65iQ4YtjgcjdU0qZIu0Dol7e5oWum4RvYoBdNNW2K
-        9KreBT+/xQ1dczQ+gw1uRPXe1qbIJfAz7xhXuaFr9ofjsI06pDkNi9O0yH3h6ONnv6A6KLTOUoSd3uGG
-        KE2LPB0/ws/exCHIktMQLp4tmI6QpkXOQtaLJs4DCDt+Fo7VpmmRB8E+eTeqo1HneJW/B3f8FY6FGVbk
-        DSia82CnvxX7uYEMK9KJsEfMu4JHv87UrnPG//dnyLAivR86g3oNjtnPwPukV3mxDCsy5Q/chSJH1bQp
-        UhZ6Hy7FdbgZjuk+FmdP2yKDndHfnXR8Dp8Cqt2qU7oWmeK81ef5bOmjSP2A++FRPQudnof6KjLmGL8O
-        DqmtUqLI4H20ehS2SEegVKN9cHHC56RGceZeXU7p0w40ei7yKLrMUmfRKqeHUSsObR8j1UjfXkWYhY0a
-        55euP6YaKOFTuBoyMPci9eVSvJvY1UaNs5f1SH25FFc+TsCo8c5vn0h9uRQfZQYuz7iCEa9TjgVP99Cl
-        badYqS+X4uAxsE+aufCmmmqgBF8oVBfO/hcXTeN18NKeR3jGGphHkWqghHtQKxchLD+X5Ey+9tjt24gX
-        kGqoT4424Zm/Vlz/Ln0B+TKrUSbhRaQa64NPmHPQOH5pG1KN5vYyPDCN41juUkqq0Zx80XUtWsep25dI
-        NZ6LC7kHo1NcxAovpHKzO12GzvHhKH6Dm9OTyLbA5ZuE1E668IVUlqMYciVyn3JfuJ6DbIlfIuVSa+7Y
-        JH0U6bQs69q6SyA/I7Wztl6B75Ky5XjkXnJ5DFnjC/aH4K9bnHh46uty2ucPT1xB82z42yJ/RlF9X54l
-        riz4Kyvnm+6gjtk4HzPhazx/7OTrQd9r7k2BjIz8CxcVmekLEH7MAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="label3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACoAAAAvCAYAAACVDljoAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH4wEJAxcYCMUHLwAABERJREFU
-        aEPtmVmoVVUYx49lk2YUDWKFQ0EFDRZEPSgWIT6EECGRRfRQFIhU9NDwmD1FQURqovgS0iT5ZD2IWtpk
-        A1EUNEiImQOOiTQP2u93PB+su/fa7Xuu5+x7H+4ffnDPOmuv77/2/tb61j63VdApsAgOwrE+8TVcCSek
-        a2Af/AFb4fse4ni/gWbfggthyLoZ/oKPYBpM6iGO57hxZ1+FCTAk3QQafRdOs6GHcjzHDaP/wgtwOnSt
-        MLoJzrChh3I8xw2jYqzH4CToSk0blV9gAXSl4TAq++F2GLSGy6jsBOMPSsNpVL6Eq6FWw21UNsNk+F/1
-        26gmcuaKrIFzoFL9NHoqrAbHt0Ll+B2Odv6eCZXqp1E1Fax+xskxB8zTPzufK+WX/TRaJw9FVi89jGij
-        xjR2rVHzwk7Oytk1rfSOZnP0bLgeHoG/4QswX5xVk0SO6kEvetJbWzfCRjgCJrHbgyeb4opsCmPrQS96
-        0pseBxy9RirvQOvXpEEOwXbYAZ700+9yHIbPYR044Hfgo8v1TTHuD/A+eLM+g92Qu9YTVqnxKfA14TLY
-        0mnL4SRWgUlvHrkQPBx77b1gnueu80Ysh9lwEYwDr3OMS2EZ5K4rNTwEqngiT3FVPgnxFuAp3fp8XvvT
-        cRm0eP02mAtjIKTRsyBO+i9Cek1QangYVOxpxe/ldYh99gqwNpsqX8EDECf2WRBvtD/DbRC6AVaAj/5j
-        cFJ+/haK8aTUUGfUfLkFlH3ehPR7H60G1VhwUra/DCeDmgE/QnpdHaWGOqO+l58P6jrI/QbwHIQeBdvu
-        bH86nsuvQfQ1jaq2qJRSQ53R9RC5eRfkBn0bPC0p+/iq4aSUC8jVHn2fBxdkcdNPx5NSQ53RtRAm7oPi
-        9+JkYnHcDW53vtcrF52fo++DkCrKaDqelBrqjH4IZ4LyTpizxT5uMSHHc8+M2j0eNkD09TC9FCKvq+KW
-        GlKjuRO5m/LloM6FTyH93g17PoRWgu0xrroHisVkIaiujfro3gDfDl2hEtXqCQjdClajf8A7568f3jU1
-        HX4Cx/VJODFljhvH61w8nuzvB9W1UTfliTAFzCuxWn0Cmm8fFDq6BOaBi8FAyk08Xd0uOjfzmIS6GHzk
-        XneBDaiq0JQaojLllCb6N3AHpIGVe+W14PtRcUfwrr8CTjImlMq2qyBXfksNH8ASeCmDlWMXRF8ftQeR
-        xfA4PAtWKfM4HbPIAfD45ngxtrnsWKZKdh/dU2gYiTjx1jPgI8l1GAnoTY/tpHdrsGZbEXyv9gDxHrj6
-        msSYnm/1oBc96U2PA2T5svZ6gb9UuEWZ4E1gLGN6mtKDXirlNmEnZxclsEkZ09h60EulUqPOsmkZc9Ro
-        LzVqtNfq2qj13PedpmVMY9ca9bdLf0rx34Geovy3SpMY09h60Eul4n+huVLWJHtBL5XyGPc09PO/y3UY
-        Ww966ajV+g//VVvsM06T7wAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="label7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="lblSetting.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
         JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAACcQAAAnEAGUaVEZAAAAB3RJ
@@ -219,6 +150,179 @@
         QQhmlOaLLFI6nCB0myn5HVm5HcEIwMo+RQ5MFaZABMG8dDKVrutOozBfZJFyHqQmdBsFawGUNkbe46pB
         vCrUX0L+J/l2bWDWTEgnNWFULgiTimZEMnD6vFapkB3kOhk36mBePXZKEGbCIZOaUNi601z+3wk1Z2vh
         O2TdxgbymiBtWke+TWrCiOtOC0rqgIeZtOr5rrGxfwGzYO7jCR81SgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="lblLog.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACoAAAAvCAYAAACVDljoAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH4wEJAxcYCMUHLwAABERJREFU
+        aEPtmVmoVVUYx49lk2YUDWKFQ0EFDRZEPSgWIT6EECGRRfRQFIhU9NDwmD1FQURqovgS0iT5ZD2IWtpk
+        A1EUNEiImQOOiTQP2u93PB+su/fa7Xuu5+x7H+4ffnDPOmuv77/2/tb61j63VdApsAgOwrE+8TVcCSek
+        a2Af/AFb4fse4ni/gWbfggthyLoZ/oKPYBpM6iGO57hxZ1+FCTAk3QQafRdOs6GHcjzHDaP/wgtwOnSt
+        MLoJzrChh3I8xw2jYqzH4CToSk0blV9gAXSl4TAq++F2GLSGy6jsBOMPSsNpVL6Eq6FWw21UNsNk+F/1
+        26gmcuaKrIFzoFL9NHoqrAbHt0Ll+B2Odv6eCZXqp1E1Fax+xskxB8zTPzufK+WX/TRaJw9FVi89jGij
+        xjR2rVHzwk7Oytk1rfSOZnP0bLgeHoG/4QswX5xVk0SO6kEvetJbWzfCRjgCJrHbgyeb4opsCmPrQS96
+        0pseBxy9RirvQOvXpEEOwXbYAZ700+9yHIbPYR044Hfgo8v1TTHuD/A+eLM+g92Qu9YTVqnxKfA14TLY
+        0mnL4SRWgUlvHrkQPBx77b1gnueu80Ysh9lwEYwDr3OMS2EZ5K4rNTwEqngiT3FVPgnxFuAp3fp8XvvT
+        cRm0eP02mAtjIKTRsyBO+i9Cek1QangYVOxpxe/ldYh99gqwNpsqX8EDECf2WRBvtD/DbRC6AVaAj/5j
+        cFJ+/haK8aTUUGfUfLkFlH3ehPR7H60G1VhwUra/DCeDmgE/QnpdHaWGOqO+l58P6jrI/QbwHIQeBdvu
+        bH86nsuvQfQ1jaq2qJRSQ53R9RC5eRfkBn0bPC0p+/iq4aSUC8jVHn2fBxdkcdNPx5NSQ53RtRAm7oPi
+        9+JkYnHcDW53vtcrF52fo++DkCrKaDqelBrqjH4IZ4LyTpizxT5uMSHHc8+M2j0eNkD09TC9FCKvq+KW
+        GlKjuRO5m/LloM6FTyH93g17PoRWgu0xrroHisVkIaiujfro3gDfDl2hEtXqCQjdClajf8A7568f3jU1
+        HX4Cx/VJODFljhvH61w8nuzvB9W1UTfliTAFzCuxWn0Cmm8fFDq6BOaBi8FAyk08Xd0uOjfzmIS6GHzk
+        XneBDaiq0JQaojLllCb6N3AHpIGVe+W14PtRcUfwrr8CTjImlMq2qyBXfksNH8ASeCmDlWMXRF8ftQeR
+        xfA4PAtWKfM4HbPIAfD45ngxtrnsWKZKdh/dU2gYiTjx1jPgI8l1GAnoTY/tpHdrsGZbEXyv9gDxHrj6
+        msSYnm/1oBc96U2PA2T5svZ6gb9UuEWZ4E1gLGN6mtKDXirlNmEnZxclsEkZ09h60EulUqPOsmkZc9Ro
+        LzVqtNfq2qj13PedpmVMY9ca9bdLf0rx34Geovy3SpMY09h60Eul4n+huVLWJHtBL5XyGPc09PO/y3UY
+        Ww966ajV+g//VVvsM06T7wAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="lblIO.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACkAAAA/CAYAAAB97+FwAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH4wEJAzkIHnUeZwAABB9JREFU
+        aEPt2mnIFVUcx/EnLbPMFoL21BaMFl+0GJRkC6Fp0ruIIBKlaCUMJCoKexdUUBEWQiK2oIgEWRAlVEIE
+        rRAtZlG0F0GklWmW2PcLHThM57l3ljPneeMPPihzvWf+zpyZc+bMHdmbMcg+OAIn4lyciuMwEWOeo3AN
+        VuEjfIet+Alf4CXciRkongOxCO9iN/YMYfEPYiqK5Bg8hb8RivgNb2ElHscT8Ch+j7jYt3EJeo0FbkDY
+        qafWgi7AoYhjfzwFt2MzwncsfD56iad4NcLOPsTlGIdhORlrEbqGRZ+B7FmIcIot8EzEOQAe0evhkToc
+        cSZjBcJ/cg2yXv1H4h3Y+K+onq7QT3+H/+YvbMLZiOPd4A34b/7EAmTL1fgHNu7RiE+x98hH4GdVr+Mw
+        xLkCFujnz2ECOseCnoaNeqQuRhyP8ieIiwu240LE8bR7lP38W9hfO8e+9QFs1FtI9Sr23vc14uJii1HN
+        MviZ3WKeG7omLsJ+5+mNMwWDirwJ1dh9wpV+oxu65iQ4YtjgcjdU0qZIu0Dol7e5oWum4RvYoBdNNW2K
+        9KreBT+/xQ1dczQ+gw1uRPXe1qbIJfAz7xhXuaFr9ofjsI06pDkNi9O0yH3h6ONnv6A6KLTOUoSd3uGG
+        KE2LPB0/ws/exCHIktMQLp4tmI6QpkXOQtaLJs4DCDt+Fo7VpmmRB8E+eTeqo1HneJW/B3f8FY6FGVbk
+        DSia82CnvxX7uYEMK9KJsEfMu4JHv87UrnPG//dnyLAivR86g3oNjtnPwPukV3mxDCsy5Q/chSJH1bQp
+        UhZ6Hy7FdbgZjuk+FmdP2yKDndHfnXR8Dp8Cqt2qU7oWmeK81ef5bOmjSP2A++FRPQudnof6KjLmGL8O
+        DqmtUqLI4H20ehS2SEegVKN9cHHC56RGceZeXU7p0w40ei7yKLrMUmfRKqeHUSsObR8j1UjfXkWYhY0a
+        55euP6YaKOFTuBoyMPci9eVSvJvY1UaNs5f1SH25FFc+TsCo8c5vn0h9uRQfZQYuz7iCEa9TjgVP99Cl
+        badYqS+X4uAxsE+aufCmmmqgBF8oVBfO/hcXTeN18NKeR3jGGphHkWqghHtQKxchLD+X5Ey+9tjt24gX
+        kGqoT4424Zm/Vlz/Ln0B+TKrUSbhRaQa64NPmHPQOH5pG1KN5vYyPDCN41juUkqq0Zx80XUtWsep25dI
+        NZ6LC7kHo1NcxAovpHKzO12GzvHhKH6Dm9OTyLbA5ZuE1E668IVUlqMYciVyn3JfuJ6DbIlfIuVSa+7Y
+        JH0U6bQs69q6SyA/I7Wztl6B75Ky5XjkXnJ5DFnjC/aH4K9bnHh46uty2ucPT1xB82z42yJ/RlF9X54l
+        riz4Kyvnm+6gjtk4HzPhazx/7OTrQd9r7k2BjIz8CxcVmekLEH7MAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="lblHome.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJ
+        TUUH4wEJBCYXW2gLiQAAAuxJREFUaEPlmc2uDFEUhVuIGSYMbvxcHoCEmSlibioicuMVhIF4BUQwJmYG
+        BuIRGPAEIn5uYkIwE4n/9d1UyUlbu6qO06e7OlbyJZ199t5nneruOqerJ5W0Ku6Jrw28JjZ6bRInxGPx
+        awpijJEzSu0Ql8RHMW2+hbELgtxR6aB4JL4LZzyFHHKpWbi2ivPihXBmu6BmTdBjIdojbokvwhkcArU3
+        Bb3mqpPimXCmUt42uLEUetGzuvjyXRHvhTPS8kPcF4cbHjQxl9vyTtC72hf8kMDIT+EMtHCnuSy2iVaY
+        ItZ1hwJ6MwdzzUxbxDnxSrhJU56IY8Ld64kdF0+Fq015KZiTuYt0QNwWn4WbqIXx62Kv6NN+Qe6Qntwk
+        9ols5Vwt3pncqzWrd9Vqnp/X3O/VdtGpI+KhGHLHuChmccegB73o6eZqwROLxeNfYjc8LV4LV5xS6549
+        dG/BI17/7OC7xA3Rt6Myzpeq5q45dHdnHM94n9wVLinluTgj5nFuYY6zgjmdlxS8b/zgcIOwyJPjkBMu
+        3u0AfBCLPrszd99vDBv8JE6JsQgveHJebfCNmPsRt0N4wZPzaoPr4p+28ErCC56cVxv8rxbAuWa34LEJ
+        NUMgl5rNYoioqbKAneKa4PhLTQ7UXBX06FOVBXDlMe/qc6BH30m2ygL4CHAVXX0O9KBXl6osgM9x1DQH
+        evQ9dqyygK6mOZTOZYMlTb8JHqWw8TAOvCbG2HR+yVxggyVNMXpU8PuYHOA1MfeMaHQL4Gq7H/fE3HFg
+        dAuIanPzU0W1YIMlTaPa3PxUUS3YYEnTqDY3P1VUCzZY0jSqzc1PFdWCDZY0jWpz81NFtWCDJU2j2tz8
+        VFEt2GBJ06g2Nz9VVAs2WNI0qs3NTxXVgg1Gm1GqaGPK3chK5gIbdMeBFOLR0SD3KFEyF9igO5ClEGfc
+        Hc5yD3Mlc4ENLhM2uEx0PhsdOxvPRu+Ivj80xgie8T5ZaV4s0zuBV3merPwGE1llT/y9i84AAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="lblStart.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH4wEJAyYFrZ5sRAAAAwRJREFU
+        aEPV2smrzWEcx/FrWJgpK/Ms2SJThrCwJIQFEQlRys7ChsxTKP4BSYTMMvwBMs8ShWTIvJPx/S7fut2O
+        0xl+0/nUq+7uPp97v79znuc5p6lFuuMGnmEW2qKh0hcv8AdfsA/D0TCJAj/xFRZ5jhXohsLHAi/xGjNx
+        BD9gkauYjtYobCzw6p9eaI/5uAZL+F85gMKOVfMC/hzpiW14D4s8RSHH6n8FjKMzCsfhM2KRK5iGVihE
+        yhWIdMQC+HJriU/Yj6HIPZUUiPTGTnyERZ5gKbogt1RTwDhW43ESv+FoXcZk5DJW1RaIdMZi3EGM1W4M
+        QaaptUCkP3bBAhZ5jEXIbKzqLWBirM7AsfqF85iI1McqiQKRrliC+/C/4cPuQz8IqSXJApEBcFP4GRax
+        0EJ0QuJJo4BpA0foAizhq5UjNg6JJq0CEcdqGR7AIm+xHT78iSTtApGBcFMYW/a7mAff5etKVgWMYzUF
+        F2GJ7ziNMag5WRaIuKNdiUeIsdqEmn5/HgUibgYPIsbqNuagAypOngWMlwhT4TY9xuoY3MZXlLwLRLwd
+        WQ0PThbxiLsBnhLLpigFIm4GD8ESOoeyp8CiFziLhijgCK2FF2wu3PWsg2fzssm7gO8NPsQeily4D/FR
+        jEBFybNAy5fRW5gNr3YqTh4FnOk18PDjwt9gPfqg6mRZoNRW4hRGo+ZkVaDlZs6z9FxU9a5bKmkXcDu9
+        Cg/hwt33bEQ/JJK0CjguE9D8QOPOcywSTRoFPKzsRRwp78Gbvbr3/qWSZAGvUrwAjtPXB2yG859akijg
+        tYpnXUckxsU9jCOUeuot4Lg0vy+Niy1v7jJJrQW8IvGw7tnWhVtgKwYj01RbIMblBOJy9xImofCXu16v
+        74APp391r9e9iSv89bovfy70Jly4F7nOfebjUirlCjgSI+EZ1VFx8Q3zEVMPbME7uHDPqstR6A/5PEC3
+        gxex1+HCv2EPhqGQsUB80D0DhxHj0jAfdMdXDfyuhAtvuK8aNPSXPRrs6zZNTX8BX9YMIucIOAUAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
+  <data name="lblPause.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAOpgAADqYAGEyd52AAAAB3RJ
+        TUUH4wEJBCIrEGuyCgAAAddJREFUaEPtmssuBEEYhUfisuEdJC4rW7Ys8QCshKUXEAtPYDeIDbFyWRDW
+        XsEC70EiEWLBgu8kXVJ69ITp+nv6T+YkXyZTU13dZ+r0dF2m0VNa9eWIVVT+rSFYhl1Yg2GoUpOwB4cZ
+        TRgFXfA6HMFB9roCLVqCV/iEdziGMahKc/AGOr94hhmQgausLCATLT2xD3ElcQvzUNhtCTULLxDO/QTT
+        oHNfZGUB9cSPa9IbdVtcKfAAG2AdqdIGVBhXivmAUxgHK5kaCNyBVaSSG9ANpW8+LhOPYBGp5AauYQt0
+        wXG5sIhUcgPnMAALoOjEnwVSRiq5AR3UD9IEnIFlpEwMqAeCRmATiiJ1AmUiZW5AUr12kSrz4KvEQJBF
+        pCo1IKWOVOUGJB2XKlJdMRDULlJ/HUt11YBUNlJdNyCpnU4jVQsDQZ1EqlYGpP9GqnYGJLW7CPcQtx24
+        gSmQamkgSHPrS4jbD2yD1DNgYUDtuo2Q65vY7c+o2nH7IHM9lHA7mNNxbofTric0bqeUqud2Up86MnmZ
+        GHC9sOV+adH94q775fXfSBmZvEwNWEQmr9IGXG/ySa63WSVtdIcGXG50D4JM7MAqWEcmr9J/NaiDdLEx
+        sYrKPavR+AIVRyc3/K8rkAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="lblStop.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH4wEJAzMODflT2AAABSBJREFU
+        aEPVmdur1FUUx6ewetGMSivCNNPyVg/dezAwSPBNvILZkxe8FkV0IypKAh8CEe1B7F/QwES8YCqplEH1
+        VHS/aFmBpaiZWvb5HGYN+8ycM2f/5pz5zfELH86ZPb/9++3922uvvdaaygBoKNwPS2Aj7IEv4Sf4E07A
+        j9U2v/OaxXAv2LcjugLGwlJwUMfhAlzKxGvtswuczBgoTRNhHXwH/0H94P6Fs+DbPwa/VP//G3q63rZv
+        4G24E9qmEfAiOPD6QWgu2+BNeAKmwX0wHhzUA9W2hbAG3oefof4+X8NzcCMMqB4Elzt9mG/0ADwDDvJq
+        yJXX3gUO9kM4B+m9d4AvoN/S1meBbzhurokcgnlwLfRXw2EBfASpif0AM8ExtCQ7rgLtN276G7RlidFI
+        eAn+gHieHmwZFFYM/hTEzY7A49BuzYBPIZ7rC3QShVZiNqRvfi9MgLI0GfZDPN+V0Jyy9BCkHsLBj4Ky
+        dRukk3BP9LmxtUMPpuik2ZT55uvlSqTmpHdquv9ehrjYk7IMm+9L7ol0Y+tEepSz/R68SFf5LAwW+WLD
+        xXrYNZzY7vANELP0cLkBBos0bc+JGJ9hRzeNAzeJXxrHzIEiug5uKYgHWBF52MWJbezULQBcAbFEH8Aw
+        yJFvxvjnYzBcLoJv9DW4HnLkhLUMx+hYjWK7ZDjgoP1CVkOu3oLo1yqvQq7cwNHP2Kwrn9Dv/w42uomN
+        83OkO/sc4obG+IbOxk3N8Jo0d3Alcs1Jlx5nlF7SpKjLfC6CjVvhKsiRB42Zlv3Og+bgXtI2m2GIrdnF
+        M7+AmyFH18B2sJ8vYRFUNlcbxEHkKp3AUbgdcuUkfoWiE1DmEzFe09PaxvCNGCLnKp2Af/2cK1dCc2pl
+        Ak9COJzdNngw+OEMPGpDpjo1ATM7kyn76s1qG9i/U2zIVKcmYHoakbLPrR0OfhhtQ6Y6NQHDCD2ZfQ2z
+        K/9UP1y2EwgTMl28HEzIIlqYkPfotomn2pCpTk2gYRMfrH7Qjc61IVOdmoC1JcN9+5p8Vd6tfpAicUk6
+        AY93B5UrD7Kw46ITaDjIVkIc61tgCOQonYChxCvgJGxvhif26xDxUJEJWBCzqmc/+1tQrjwMkbJZNswN
+        CeqDOSdhSOGkmuE1rQZzeqAwPYO5riTfzpH9e0S7IrlaCzGQVnkDcmWaG/0MI2rleYtY8YVllNy6vUvv
+        JD4DQ/EiWG3Qni0a58i8xVqsY/RFW9qvyU3l8vql7tR6aBGZP1s7KkLRnHs+hPtsMHWT+ncgVkGTyk31
+        ypCrdBhifP4+0aC7IVZBP/s0DBY9DxFCfwu9Ftt0hTFLE47HoNOaDoY5Ma4XoFfdBGmC77KZJnZK/pz1
+        CcR4dkKfm/4R0FdHJ7P/W6FsudHTl6n/95eiLBkT/QXpJMpcCW1cdx7PN/os5Bn1Sk/BaYibaE5l7Alt
+        PjWbk+DhWugHDnUlOIl0JQzA9E7tcLGeCxau0g3rm29p8CE7ak7pntDFeiK6pAPxS7tlTJ9hWB9hsmjz
+        PqPlwadyY6c2KZ7YthmGWM3LLYgpr3VPuZr7wIJyem/jnOwNmytdrOdEVLFTPNqt6plPWFuyPOPBaI4t
+        91TbDAcMpd+D3u7jL5UWjdsm82bDjji16zG3cHXMtSOENly3LfKOFE9Yg7v1MAlKkXapCbjBNAEH2NPg
+        esNrnaAmuBzugAGx9VZkPmGF2yKxdVY3+FegNzF6FJMP2/xuEzhobbyfv/RXKv8Ds0pTRv6ik9UAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
+  <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEgAAAAwCAYAAACynDzrAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH4wEJAyor3f0uhwAAALdJREFU
+        aEPt28EJgzAARuEs4sHlxO7gPq7UEcRrvbe/BCpK6hug74MfQo7vnJR4u9s1L92x72HOhuzx5xuzKVuy
+        U6A9jqoue2anQHs9VX1moBsGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIG
+        AgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCzUA+JD80H5L7FaHu51cE115Zs1e2uevK9gE/
+        YxOQuV5EwgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEgAAAAwCAYAAACynDzrAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH4wEJAyor3f0uhwAAALdJREFU
+        aEPt28EJgzAARuEs4sHlxO7gPq7UEcRrvbe/BCpK6hug74MfQo7vnJR4u9s1L92x72HOhuzx5xuzKVuy
+        U6A9jqoue2anQHs9VX1moBsGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIG
+        AgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCzUA+JD80H5L7FaHu51cE115Zs1e2uevK9gE/
+        YxOQuV5EwgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEgAAAAwCAYAAACynDzrAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH4wEJAyor3f0uhwAAALdJREFU
+        aEPt28EJgzAARuEs4sHlxO7gPq7UEcRrvbe/BCpK6hug74MfQo7vnJR4u9s1L92x72HOhuzx5xuzKVuy
+        U6A9jqoue2anQHs9VX1moBsGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIG
+        AgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCzUA+JD80H5L7FaHu51cE115Zs1e2uevK9gE/
+        YxOQuV5EwgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEgAAAAwCAYAAACynDzrAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH4wEJAyor3f0uhwAAALdJREFU
+        aEPt28EJgzAARuEs4sHlxO7gPq7UEcRrvbe/BCpK6hug74MfQo7vnJR4u9s1L92x72HOhuzx5xuzKVuy
+        U6A9jqoue2anQHs9VX1moBsGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIG
+        AgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCBgIGAgYCzUA+JD80H5L7FaHu51cE115Zs1e2uevK9gE/
+        YxOQuV5EwgAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
